--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -1,43 +1,70 @@
 bin_PROGRAMS = xfce4-panel
-xfce4_panel_SOURCES = \
-controls.c \
-controls.h \
-controls_dialog.c \
-controls_dialog.h \
-global.h \
-groups.c \
-groups.h \
-icons.c \
-icons.h \
-item.c \
-item.h \
-item_dialog.c \
-item_dialog.h \
-main.c \
-main.h \
-mcs_client.c \
-mcs_client.h \
-panel.c \
-panel.h \
-plugins.h \
-popup.c \
-popup.h \
-settings.c \
-settings.h \
-xfce.h \
-xfce_support.c \
-xfce_support.h 
 
-pkginclude_HEADERS = \
-controls.h \
-debug.h \
-global.h \
-icons.h \
-main.h \
-panel.h \
-plugins.h \
-xfce_support.h \
-xfce.h 
+xfce4_panel_SOURCES =							\
+	controls.c							\
+	controls.h 							\
+	controls_dialog.c 						\
+	controls_dialog.h 						\
+	global.h 							\
+	groups.c 							\
+	groups.h 							\
+	icons.c 							\
+	icons.h 							\
+	item.c 								\
+	item.h 								\
+	item_dialog.c 							\
+	item_dialog.h 							\
+	main.c								\
+	main.h 								\
+	mcs_client.c 							\
+	mcs_client.h 							\
+	panel.c 							\
+	panel.h 							\
+	plugins.h 							\
+	popup.c 							\
+	popup.h 							\
+	settings.c 							\
+	settings.h 							\
+	xfce.h 								\
+	xfce_support.c 							\
+	xfce_support.h 
 
-xfce4_panel_CFLAGS = -Wall -I$(top_srcdir) @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ @MCS_CLIENT_CFLAGS@ @STARTUP_NOTIFICATION_CFLAGS@ -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DVERSION=\"@VERSION@\" -DLOCALEDIR=\"$(datadir)/locale\"
-xfce4_panel_LDADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@ @MCS_CLIENT_LIBS@ @STARTUP_NOTIFICATION_LIBS@
+pkginclude_HEADERS = 							\
+	controls.h							\
+	debug.h 							\
+	global.h 							\
+	icons.h 							\
+	main.h 								\
+	panel.h 							\
+	plugins.h 							\
+	xfce_support.h 							\
+	xfce.h 
+
+xfce4_panel_CFLAGS = 							\
+	-I$(top_srcdir)							\
+	@GLIB_CFLAGS@							\
+	@GTK_CFLAGS@							\
+	@LIBSTARTUP_NOTIFICATION_CFLAGS@				\
+	@LIBX11_CFLAGS@							\
+	@LIBXFCEGUI4_CFLAGS@						\
+	@LIBXFCE4MCS_CLIENT_CFLAGS@					\
+	@LIBXFCE4UTIL_CFLAGS@						\
+	@LIBXML_CFLAGS@							\
+	-DDATADIR=\"$(pkgdatadir)\"					\
+	-DLIBDIR=\"$(pkglibdir)\"					\
+	-DSYSCONFDIR=\"$(sysconfdir)\"					\
+	-DLOCALEDIR=\"$(localedir)\"
+
+xfce4_panel_LDFLAGS =							\
+	-export-dynamic
+
+xfce4_panel_LDADD =							\
+	@LIBS@								\
+	@GLIB_LIBS@							\
+	@GTK_LIBS@							\
+	@LIBSTARTUP_NOTIFICATION_LIBS@					\
+	@LIBX11_LIBS@							\
+	@LIBXFCEGUI4_LIBS@						\
+	@LIBXFCE4MCS_CLIENT_LIBS@					\
+	@LIBXFCE4UTIL_LIBS@						\
+	@LIBXML_LIBS@
