--- a/xfce4rc.in
+++ b/xfce4rc.in
@@ -5,8 +5,8 @@
     <Group>
       <Popup>
         <Item>
-          <Caption>XTerm</Caption>
-          <Command term="0">xterm</Command>
+          <Caption>Terminal</Caption>
+          <Command term="0">xfterm4</Command>
           <Tooltip>Terminal</Tooltip>
           <Icon id="12"/>
         </Item>
