--- a/config.h.in
+++ b/config.h.in
@@ -1,6 +1,6 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
-/* Define to 1 for debug. */
+/* Define for debugging support */
 #undef DEBUG
 
 /* always defined to indicate that i18n is enabled */
@@ -8,12 +8,6 @@
 
 /* Name of default gettext domain */
 #undef GETTEXT_PACKAGE
-
-/* Define glib required version. */
-#undef GLIB_REQUIRED_VERSION
-
-/* Define gtk required version. */
-#undef GTK_REQUIRED_VERSION
 
 /* Define to 1 if you have the `bind_textdomain_codeset' function. */
 #undef HAVE_BIND_TEXTDOMAIN_CODESET
@@ -30,14 +24,11 @@
 /* Define if your <locale.h> file defines LC_MESSAGES. */
 #undef HAVE_LC_MESSAGES
 
-/* Define to 1 if you have the `X11' library (-lX11). */
+/* Define if you have libstartup-notification-1.0 >= 0.4 */
+#undef HAVE_LIBSTARTUP_NOTIFICATION
+
+/* Define if libX11 is available */
 #undef HAVE_LIBX11
-
-/* Define to 1 if you have the `Xext' library (-lXext). */
-#undef HAVE_LIBXEXT
-
-/* Define to 1 if you have the `Xpm' library (-lXpm). */
-#undef HAVE_LIBXPM
 
 /* Define to 1 if you have the <locale.h> header file. */
 #undef HAVE_LOCALE_H
@@ -45,11 +36,14 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
-/* Define to 1 if you have the `setlocale' function. */
-#undef HAVE_SETLOCALE
+/* Define to 1 if you have the `sigaction' function. */
+#undef HAVE_SIGACTION
 
-/* Define startup notification support */
-#undef HAVE_STARTUP_NOTIFICATION
+/* Define to 1 if you have the <signal.h> header file. */
+#undef HAVE_SIGNAL_H
+
+/* Define to 1 if you have the <stddef.h> header file. */
+#undef HAVE_STDDEF_H
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
@@ -57,20 +51,11 @@
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
 
-/* Define to 1 if you have the `strchr' function. */
-#undef HAVE_STRCHR
-
 /* Define to 1 if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
 
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
-
-/* Define to 1 if you have the `strrchr' function. */
-#undef HAVE_STRRCHR
-
-/* Define to 1 if you have the `strstr' function. */
-#undef HAVE_STRSTR
 
 /* Define to 1 if you have the <sys/stat.h> header file. */
 #undef HAVE_SYS_STAT_H
@@ -80,12 +65,6 @@
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
-
-/* Define libxfce4mcs required version. */
-#undef LIBXFCE4MCS_REQUIRED_VERSION
-
-/* Define libxfcegui4 required version. */
-#undef LIBXFCEGUI4_REQUIRED_VERSION
 
 /* Name of package */
 #undef PACKAGE
@@ -105,9 +84,6 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define pango required version. */
-#undef PANGO_REQUIRED_VERSION
-
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
@@ -117,9 +93,19 @@
 /* Define to 1 if the X Window System is missing or not being used. */
 #undef X_DISPLAY_MISSING
 
-/* Define to empty if `const' does not conform to ANSI C. */
-#undef const
+/* Define to 1 if on AIX 3.
+   System headers sometimes define this.
+   We just want to avoid a redefinition error message.  */
+#ifndef _ALL_SOURCE
+# undef _ALL_SOURCE
+#endif
 
-/* Define as `__inline' if that's what the C compiler calls it, or to nothing
-   if it is not supported. */
-#undef inline
+/* Define to 1 if on MINIX. */
+#undef _MINIX
+
+/* Define to 2 if the system does not provide POSIX.1 features except with
+   this defined. */
+#undef _POSIX_1_SOURCE
+
+/* Define to 1 if you need to in order for `stat' and other things to work. */
+#undef _POSIX_SOURCE
