--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -1,10 +1,19 @@
 plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libclock.la
-libclock_la_LDFLAGS = "-module -avoid-version"
 
-libclock_la_SOURCES = \
-clock.c
+libclock_la_LDFLAGS =							\
+	-avoid-version							\
+	-module
 
-libclock_la_CFLAGS = -Wall -I$(top_srcdir) -I$(top_srcdir)/panel  @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\" -DLOCALEDIR=\"$(datadir)/locale\"
-libclock_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
+libclock_la_SOURCES =							\
+	clock.c
+
+libclock_la_CFLAGS =							\
+	-I$(top_srcdir)							\
+	-I$(top_srcdir)/panel						\
+	@LIBXFCEGUI4_CFLAGS@						\
+	@LIBXML_CFLAGS@
+
+libclock_la_LIBADD = 							\
+	@LIBS@
