--- a/po/Makefile.in.in
+++ b/po/Makefile.in.in
@@ -27,8 +27,8 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 datadir = @datadir@
 libdir = @libdir@
-localedir = $(libdir)/locale
-gnulocaledir = $(datadir)/locale
+localedir = @localedir@
+gnulocaledir = @localedir@
 gettextsrcdir = $(datadir)/glib-2.0/gettext/po
 subdir = po
 
