--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -9,18 +9,16 @@ Group: 		User Interface/Desktops
 BuildRoot: 	%{_tmppath}/%{name}-root
 Requires:	gtk2 >= @GTK_REQUIRED_VERSION@
 Requires:	glib2 >= @GLIB_REQUIRED_VERSION@
-Requires:	pango >= @PANGO_REQUIRED_VERSION@
 Requires:	libxfcegui4 >= @LIBXFCEGUI4_REQUIRED_VERSION@
-Requires:	libxfce4mcs >= @LIBXFCE4MCS_REQUIRED_VERSION@
-Requires:	xfce-mcs-manager
-Requires:	libxml2
+Requires:	libxfce4mcs >= @LIBXFCE4MCS_CLIENT_REQUIRED_VERSION@
+Requires:	xfce-mcs-manager >= @XFCE_MCS_MANAGER_REQUIRED_VERSION@
+Requires:	libxml2 >= @LIBXML_REQUIRED_VERSION@
 BuildRequires: 	gtk2-devel >= @GTK_REQUIRED_VERSION@
 BuildRequires: 	glib2-devel >= @GLIB_REQUIRED_VERSION@
-BuildRequires: 	pango-devel >= @PANGO_REQUIRED_VERSION@
 BuildRequires: 	libxfcegui4-devel >= @LIBXFCEGUI4_REQUIRED_VERSION@
-BuildRequires:	libxfce4mcs-devel >= @LIBXFCE4MCS_REQUIRED_VERSION@
-BuildRequires:	xfce-mcs-manager-devel
-BuildRequires: 	libxml2-devel
+BuildRequires:	libxfce4mcs-devel >= @LIBXFCE4MCS_CLIENT_REQUIRED_VERSION@
+BuildRequires:	xfce-mcs-manager-devel >= @XFCE_MCS_MANAGER_REQUIRED_VERSION@
+BuildRequires: 	libxml2-devel >= @LIBXML_REQUIRED_VERSION@
 
 %description
 xfce4 is the panel for the XFce desktop environment
@@ -60,7 +58,7 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
-%doc example.xfce4rc README TODO ChangeLog NEWS INSTALL COPYING AUTHORS
+%doc README TODO ChangeLog NEWS NOTES INSTALL COPYING AUTHORS
 %{_bindir}/*
 
 %files themes
