--- a/Makefile.in
+++ b/Makefile.in
@@ -176,7 +176,7 @@ confdir = $(sysconfdir)/xfce4
 
 conf_DATA = xfce4rc
 
-EXTRA_DIST = xfce4rc.in xfce4.spec.in HACKING
+EXTRA_DIST = xfce4rc.in xfce4.spec.in HACKING .indent.pro
 
 SUBDIRS = po doc icons panel settings plugins themes
 subdir = .
