Debugging stuff now provided by libxfce4util. As a result of this change libxfcegui4 now depends on libxfce4util. Some other updates. added a hint to the libxfcegui4 README for Xinerama problems with XFree86.
(Old svn revision: 3609)

--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,9 @@
 /* Define for debugging support */
 #undef DEBUG
 
+/* Define for tracing support */
+#undef DEBUG_TRACE
+
 /* always defined to indicate that i18n is enabled */
 #undef ENABLE_NLS
 
