--- a/themes/Makefile.in
+++ b/themes/Makefile.in
@@ -165,7 +165,7 @@ SUBDIRS = \
 	Curve 								\
 	Noia 								\
 	Crystal 							\
-	Carillon
+	FreeIcons
 
 subdir = themes
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
