--- a/themes/FreeIcons/Makefile.in
+++ b/themes/FreeIcons/Makefile.in
@@ -159,8 +159,9 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-carillondir = $(pkgdatadir)/themes/Carillon
-carillon_DATA = \
+freeiconsdir = $(pkgdatadir)/themes/Carillon
+freeicons_DATA = \
+README \
 edit.png \
 file1.png \
 file2.png \
@@ -183,13 +184,13 @@ terminal.png \
 unknown.png
 
 
-EXTRA_DIST = $(carillon_DATA) README
-subdir = themes/Carillon
+EXTRA_DIST = $(carillon_DATA)
+subdir = themes/FreeIcons
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 DIST_SOURCES =
-DATA = $(carillon_DATA)
+DATA = $(freeicons_DATA)
 
 DIST_COMMON = README Makefile.am Makefile.in
 all: all-am
@@ -197,7 +198,7 @@ all: all-am
 .SUFFIXES:
 $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign  themes/Carillon/Makefile
+	  $(AUTOMAKE) --foreign  themes/FreeIcons/Makefile
 Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 
@@ -210,23 +211,23 @@ clean-libtool:
 distclean-libtool:
 	-rm -f libtool
 uninstall-info-am:
-carillonDATA_INSTALL = $(INSTALL_DATA)
-install-carillonDATA: $(carillon_DATA)
+freeiconsDATA_INSTALL = $(INSTALL_DATA)
+install-freeiconsDATA: $(freeicons_DATA)
 	@$(NORMAL_INSTALL)
-	$(mkinstalldirs) $(DESTDIR)$(carillondir)
-	@list='$(carillon_DATA)'; for p in $$list; do \
+	$(mkinstalldirs) $(DESTDIR)$(freeiconsdir)
+	@list='$(freeicons_DATA)'; for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  f="`echo $$p | sed -e 's|^.*/||'`"; \
-	  echo " $(carillonDATA_INSTALL) $$d$$p $(DESTDIR)$(carillondir)/$$f"; \
-	  $(carillonDATA_INSTALL) $$d$$p $(DESTDIR)$(carillondir)/$$f; \
+	  echo " $(freeiconsDATA_INSTALL) $$d$$p $(DESTDIR)$(freeiconsdir)/$$f"; \
+	  $(freeiconsDATA_INSTALL) $$d$$p $(DESTDIR)$(freeiconsdir)/$$f; \
 	done
 
-uninstall-carillonDATA:
+uninstall-freeiconsDATA:
 	@$(NORMAL_UNINSTALL)
-	@list='$(carillon_DATA)'; for p in $$list; do \
+	@list='$(freeicons_DATA)'; for p in $$list; do \
 	  f="`echo $$p | sed -e 's|^.*/||'`"; \
-	  echo " rm -f $(DESTDIR)$(carillondir)/$$f"; \
-	  rm -f $(DESTDIR)$(carillondir)/$$f; \
+	  echo " rm -f $(DESTDIR)$(freeiconsdir)/$$f"; \
+	  rm -f $(DESTDIR)$(freeiconsdir)/$$f; \
 	done
 tags: TAGS
 TAGS:
@@ -271,7 +272,7 @@ check: check-am
 all-am: Makefile $(DATA)
 
 installdirs:
-	$(mkinstalldirs) $(DESTDIR)$(carillondir)
+	$(mkinstalldirs) $(DESTDIR)$(freeiconsdir)
 
 install: install-am
 install-exec: install-exec-am
@@ -313,7 +314,7 @@ info: info-am
 
 info-am:
 
-install-data-am: install-carillonDATA
+install-data-am: install-freeiconsDATA
 
 install-exec-am:
 
@@ -339,17 +340,18 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-carillonDATA uninstall-info-am
+uninstall-am: uninstall-freeiconsDATA uninstall-info-am
 
 .PHONY: all all-am check check-am clean clean-generic clean-libtool \
 	distclean distclean-generic distclean-libtool distdir dvi \
-	dvi-am info info-am install install-am install-carillonDATA \
-	install-data install-data-am install-exec install-exec-am \
-	install-info install-info-am install-man install-strip \
-	installcheck installcheck-am installdirs maintainer-clean \
-	maintainer-clean-generic mostlyclean mostlyclean-generic \
-	mostlyclean-libtool pdf pdf-am ps ps-am uninstall uninstall-am \
-	uninstall-carillonDATA uninstall-info-am
+	dvi-am info info-am install install-am install-data \
+	install-data-am install-exec install-exec-am \
+	install-freeiconsDATA install-info install-info-am install-man \
+	install-strip installcheck installcheck-am installdirs \
+	maintainer-clean maintainer-clean-generic mostlyclean \
+	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
+	uninstall uninstall-am uninstall-freeiconsDATA \
+	uninstall-info-am
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
