--- a/themes/FreeIcons/Makefile.in
+++ b/themes/FreeIcons/Makefile.in
@@ -159,7 +159,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-freeiconsdir = $(pkgdatadir)/themes/Carillon
+freeiconsdir = $(pkgdatadir)/themes/FreeIcons
 freeicons_DATA = \
 README \
 edit.png \
@@ -184,7 +184,7 @@ terminal.png \
 unknown.png
 
 
-EXTRA_DIST = $(carillon_DATA)
+EXTRA_DIST = $(freeicons_DATA)
 subdir = themes/FreeIcons
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
