--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,8 +1,7 @@
-icondir = $(pkgdatadir)/icons
+noinst_DATA = xfce4-panel-icon.h xfce4-panel.png
 
-icon_DATA = 								\
-	diag_icon.xpm							\
-	menu_icon.xpm 							\
-	xfce_icon.xpm 
+xfce4-panel-icon.h: $(srcdir)/xfce4-panel.png
+	gdk-pixbuf-csource --raw --build-list 				\
+	panel_icon_data $(srcdir)/xfce4-panel.png > xfce4-panel-icon.h
 
-EXTRA_DIST = $(icon_DATA)
+all: xfce4-panel-icon.h
