--- a/configure.ac
+++ b/configure.ac
@@ -42,7 +42,7 @@ BM_DEPEND([XFCE_MCS_MANAGER], [xfce-mcs-manager], [0.1.0])
 
 dnl Check for optional packages
 BM_DEPEND_CHECK([LIBSTARTUP_NOTIFICATION], [libstartup-notification-1.0],
-  [0.4], [startup-notification], [startup notification library])
+  [0.4], [startup-notification], [startup notification library], [yes])
 
 dnl Check for debugging support
 BM_DEBUG_SUPPORT
