Added themedir variable to pkg-config file and increased version to 0.10.2
(Old svn revision: 3658)

--- a/panel/xfce4-panel-1.0.pc.in
+++ b/panel/xfce4-panel-1.0.pc.in
@@ -1,9 +1,11 @@
 prefix=@prefix@
+datadir=@datadir@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
 pluginsdir=${libdir}/xfce4/plugins
+themesdir=${datadir}/xfce4/themes
 
 Name: xfce4-panel
 Description: XFce4 desktop panel
