Several changes. See http://www.home.unix-ag.org/bmeurer/xfce/index.html#20030502 for details.
(Old svn revision: 3663)

--- a/panel/xfce4-panel-1.0.pc.in
+++ b/panel/xfce4-panel-1.0.pc.in
@@ -4,7 +4,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-pluginsdir=${libdir}/xfce4/plugins
+pluginsdir=${libdir}/xfce4/panel-plugins
 themesdir=${datadir}/xfce4/themes
 
 Name: xfce4-panel
