--- a/settings/Makefile.in
+++ b/settings/Makefile.in
@@ -117,6 +117,7 @@ USE_NLS = @USE_NLS@
 VERSION = @VERSION@
 XFCE_MCS_MANAGER_CFLAGS = @XFCE_MCS_MANAGER_CFLAGS@
 XFCE_MCS_MANAGER_LIBS = @XFCE_MCS_MANAGER_LIBS@
+XFCE_MCS_MANAGER_PLUGINSDIR = @XFCE_MCS_MANAGER_PLUGINSDIR@
 XFCE_MCS_MANAGER_REQUIRED_VERSION = @XFCE_MCS_MANAGER_REQUIRED_VERSION@
 XGETTEXT = @XGETTEXT@
 X_CFLAGS = @X_CFLAGS@
@@ -159,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-plugindir = $(libdir)/xfce-mcs-manager/plugins
+plugindir = @XFCE_MCS_MANAGER_PLUGINSDIR@
 
 plugin_LTLIBRARIES = libxfce4settings.la
 
