Fixes for rpm target and distcheck stuff
(Old svn revision: 3668)

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,5 +1,7 @@
 noinst_DATA = xfce4-panel-icon.h xfce4-panel.png
 
+EXTRA_DIST = $(noinst_DATA)
+
 xfce4-panel-icon.h: $(srcdir)/xfce4-panel.png
 	gdk-pixbuf-csource --raw --build-list 				\
 	panel_icon_data $(srcdir)/xfce4-panel.png > xfce4-panel-icon.h
