--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -208,6 +208,7 @@ xfce4_panelinclude_HEADERS = \
 
 
 xfce4_panel_CFLAGS = \
+	-I$(top_srcdir)							\
 	@LIBSTARTUP_NOTIFICATION_CFLAGS@				\
 	@LIBX11_CFLAGS@							\
 	@LIBXFCEGUI4_CFLAGS@						\
