--- a/plugins/switcher/Makefile.am
+++ b/plugins/switcher/Makefile.am
@@ -10,6 +10,7 @@ libswitcher_la_SOURCES =						\
 	switcher.c
 
 libswitcher_la_CFLAGS =							\
+	-I$(top_srcdir)							\
 	@LIBX11_CFLAGS@							\
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXML_CFLAGS@
