--- a/settings/Makefile.in
+++ b/settings/Makefile.in
@@ -178,6 +178,7 @@ libxfce4settings_la_SOURCES = \
 
 
 libxfce4settings_la_CFLAGS = \
+	-I$(top_srcdir)							\
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXML_CFLAGS@							\
 	@XFCE_MCS_MANAGER_CFLAGS@					\
