--- a/Makefile.in
+++ b/Makefile.in
@@ -167,7 +167,9 @@ conf_DATA = xfce4rc
 EXTRA_DIST = \
 	HACKING								\
 	NOTES								\
-	PLUGIN.NOTES
+	xfce4rc							\
+	xfce4.spec							\
+	.indent.pro
 
 
 SUBDIRS = \
@@ -185,7 +187,7 @@ subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
-CONFIG_CLEAN_FILES = xfce4.spec xfce4rc
+CONFIG_CLEAN_FILES = xfce4.spec
 DIST_SOURCES =
 DATA = $(conf_DATA)
 
@@ -199,7 +201,7 @@ DIST_COMMON = README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
 	Makefile.in NEWS TODO aclocal.m4 compile config.guess \
 	config.h.in config.sub configure configure.ac depcomp \
 	install-sh ltcf-c.sh ltconfig ltmain.sh missing mkinstalldirs \
-	xfce4.spec.in xfce4rc.in
+	xfce4.spec.in
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
@@ -239,8 +241,6 @@ $(srcdir)/config.h.in: @MAINTAINER_MODE_TRUE@ $(top_srcdir)/configure.ac $(ACLOC
 distclean-hdr:
 	-rm -f config.h stamp-h1
 xfce4.spec: $(top_builddir)/config.status xfce4.spec.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-xfce4rc: $(top_builddir)/config.status xfce4rc.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 
 mostlyclean-libtool:
@@ -619,12 +619,9 @@ uninstall-info: uninstall-info-recursive
 	uninstall-info-am uninstall-info-recursive uninstall-recursive
 
 @SET_MAKE@
-	xfce4rc.in							\
-	xfce4.spec.in							\
-	.indent.pro
 
 distclean-local:
-	rm -rf xfce4rc xfce4.spec *.cache *~
+	rm -rf xfce4.spec *.cache *~
 
 rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
