--- a/plugins/mailcheck/Makefile.in
+++ b/plugins/mailcheck/Makefile.in
@@ -174,6 +174,7 @@ libmailcheck_la_SOURCES = \
 
 
 libmailcheck_la_CFLAGS = \
+	-I$(top_srcdir)							\
 	@LIBSTARTUP_NOTIFICATION_CFLAGS@				\
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXML_CFLAGS@
