--- a/plugins/switcher/Makefile.in
+++ b/plugins/switcher/Makefile.in
@@ -174,6 +174,7 @@ libswitcher_la_SOURCES = \
 
 
 libswitcher_la_CFLAGS = \
+	-I$(top_srcdir)							\
 	@LIBX11_CFLAGS@							\
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXML_CFLAGS@
