--- a/plugins/systembuttons/Makefile.in
+++ b/plugins/systembuttons/Makefile.in
@@ -174,6 +174,7 @@ libsystembuttons_la_SOURCES = \
 
 
 libsystembuttons_la_CFLAGS = \
+	-I$(top_srcdir)							\
 	@LIBXFCEGUI4_CFLAGS@						\
 	@LIBXML_CFLAGS@
 
