--- a/Makefile.am
+++ b/Makefile.am
@@ -26,4 +26,7 @@ rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
 
+html:
+	make -C doc html
+
 ACLOCAL_AMFLAGS = -I m4
