Fix distcheck target. Rename package to xfce4-panel. Set version to 3.90 (betas will be 3.90, 3.91, 3.92, etc.)
(Old svn revision: 3675)

--- a/doc/html/Makefile.am
+++ b/doc/html/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = $(html_DATA)
-htmldir=$(pkgdatadir)/doc/html
+htmldir=$(datadir)/xfce4/doc/html
 html_DATA=\
 panel-copyright.html \
 xfce4-panel.html \
