--- a/doc/html/Makefile.in
+++ b/doc/html/Makefile.in
@@ -161,7 +161,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 EXTRA_DIST = $(html_DATA)
-htmldir = $(pkgdatadir)/doc/html
+htmldir = $(datadir)/xfce4/doc/html
 html_DATA = \
 panel-copyright.html \
 xfce4-panel.html \
