--- a/doc/images/Makefile.in
+++ b/doc/images/Makefile.in
@@ -161,7 +161,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 EXTRA_DIST = $(images_DATA)
-imagesdir = $(pkgdatadir)/doc/images
+imagesdir = $(datadir)/xfce4/doc/images
 images_DATA = \
 clock-properties.png \
 default_panel.png \
