--- a/plugins/clock/Makefile.in
+++ b/plugins/clock/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-plugindir = $(pkglibdir)/panel-plugins
+plugindir = $(libdir)/xfce4/panel-plugins
 
 plugin_LTLIBRARIES = libclock.la
 
