--- a/themes/Crystal/Makefile.in
+++ b/themes/Crystal/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-crystaldir = $(pkgdatadir)/themes/Crystal
+crystaldir = $(datadir)/xfce4/themes/Crystal
 
 crystal_DATA = \
 edit.png \
