--- a/themes/Curve/Makefile.in
+++ b/themes/Curve/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-curvedir = $(pkgdatadir)/themes/Curve
+curvedir = $(datadir)/xfce4/themes/Curve
 curve_DATA = \
 edit.png \
 file1.png \
