--- a/themes/FreeIcons/Makefile.am
+++ b/themes/FreeIcons/Makefile.am
@@ -1,4 +1,4 @@
-freeiconsdir = $(pkgdatadir)/themes/FreeIcons
+freeiconsdir = $(datadir)/xfce4/themes/FreeIcons
 freeicons_DATA = 							\
 	README 								\
 	edit.png							\
