--- a/themes/FreeIcons/Makefile.in
+++ b/themes/FreeIcons/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-freeiconsdir = $(pkgdatadir)/themes/FreeIcons
+freeiconsdir = $(datadir)/xfce4/themes/FreeIcons
 freeicons_DATA = \
 	README 								\
 	edit.png							\
