--- a/themes/Gnome/Makefile.in
+++ b/themes/Gnome/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-gnomedir = $(pkgdatadir)/themes/Gnome
+gnomedir = $(datadir)/xfce4/themes/Gnome
 gnome_DATA = \
 edit.png \
 file1.png \
