--- a/themes/Noia/Makefile.in
+++ b/themes/Noia/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-noiadir = $(pkgdatadir)/themes/Noia
+noiadir = $(datadir)/xfce4/themes/Noia
 
 noia_DATA = \
 edit.png \
