--- a/themes/XFce/Makefile.in
+++ b/themes/XFce/Makefile.in
@@ -160,7 +160,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-xfcedir = $(pkgdatadir)/themes/XFce
+xfcedir = $(datadir)/xfce4/themes/XFce
 xfce_DATA = \
 edit.xpm \
 file1.xpm \
