--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,1 +1,11 @@
-SUBDIRS=images html xml
+SUBDIRS = \
+	C
+
+noinst_DATA = \
+	xfce-nochunk.xsl
+
+EXTRA_DIST = $(noinst_DATA)
+
+html: Makefile
+	make -C C html
+
