--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
 
-html:
+html: Makefile
 	make -C doc html
 
 ACLOCAL_AMFLAGS = -I m4
